--- a/src/views/admin/partials/footer.ejs
+++ b/src/views/admin/partials/footer.ejs
@@ -18,7 +18,7 @@
         </ul>
     <div class="footer-redes-container">
         <div class="logo-container">
-            <img src="images/Central Music Logo.svg" alt="logo">
+            <img src="../images/Home/Central Music Logo.svg" alt="logo">
         </div>
         <div class="redes-sociales">
             <svg width="23" height="16" viewBox="0 0 23 16" fill="none" xmlns="http://www.w3.org/2000/svg">
