--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -5,7 +5,7 @@
     <%-include('../partials/header')  %> 
         <div class="login-container">
             <div class="login.box">
-                <img src="images/Central Music Logo.svg" alt="logo-fa-music" style="max-width: 100%;">
+                <img src="images/Home/Central Music Logo.svg" alt="logo-fa-music" style="max-width: 100%;">
             </div>
             <section class="form-container login formulario">
             <h2 class="nombreLogin">LOGIN</h2>
