--- a/public/CSS/home/main.css
+++ b/public/CSS/home/main.css
@@ -2,7 +2,7 @@
 
 /* DANDO ESTILOS A LA SECCION NEW PRODUCTS Y POPULAR FINDS*/
 
-main {
+.main-index {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -28,14 +28,14 @@ main {
      width: 100%;
  }
  
- main h3 {
+ .main-index h3 {
      margin-top: 27px ;
      margin-bottom: 20px;
      width: 100%;
      font-size: 24px;
  }
  
- main article {
+ .main-index article {
      height: 417px;
      margin-bottom: 20px;
  }
@@ -84,7 +84,7 @@ main {
  
  }
  
- main img {
+ .main-index img {
      width: 100%;
      height: 100%;
      filter: drop-shadow(0px 2px 4px rgba(28, 5, 77, 0.1)) drop-shadow(0px 12px 32px rgba(0, 0, 0, 0.05));
@@ -179,7 +179,7 @@ main {
  
  .other-products #pedales {
      
-     background: url('../../images/Home/Gear Hands/pedales.jpg'), linear-gradient(134.57deg, #FFFFFF 0%, #D1D1D1 100%);
+     background: url('../../images/Gear Hands/pedales.jpg'), linear-gradient(134.57deg, #FFFFFF 0%, #D1D1D1 100%);
      background-position: 50%;
      background-size: cover;
      
@@ -187,26 +187,26 @@ main {
  
  
  .other-products #aprender {
-     background: url('../../images/Home/Gear Hands/aprender.jpg');
+     background: url('../../images/Gear Hands/aprender.jpg');
      background-position: 50%;
      background-size: cover;
  }
  
  .other-products #como-sonar {
-     background: url('../../images/Home/Gear Hands/como-sonar.jpg');
+     background: url('../../images/Gear Hands/como-sonar.jpg');
      background-position: 50%;
      background-size: cover;
  }
  
  .other-products #tono {
-     background: url('../../images/Home/Gear Hands/jams.avif');
+     background: url('../../images/Gear Hands/jams.avif');
      background-position: 50%;
      background-size: cover;
      
  }
  
  .other-products #setup {
-     background: url('../../images/Home/Gear Hands/lespaul.jpg');
+     background: url('../../images/Gear Hands/lespaul.jpg');
      background-position: 50%;
      background-size: cover;
  }
@@ -249,16 +249,16 @@ main {
  @media (min-width: 768px) {
     /* comienzo de estilos de la seciones main */
 
-    main {
+    .main-index {
         margin-top: 166px;
     }
 
-    main h3 {
+    .main-index h3 {
         font-size: 40px;
         
     }
 
-    main article {
+    .main-index article {
         margin-bottom: 40px;
         
     }
