--- a/src/views/users/registro.ejs
+++ b/src/views/users/registro.ejs
@@ -4,7 +4,7 @@
 <body class ="body-register home-container">
     <%-include('../partials/header')  %> 
      <section class="form">
-        <img src="images/Central Music Logo.svg" alt="logo-fa-music" style="max-width: 100%;">
+        <img src="images/Home/Central Music Logo.svg" alt="logo-fa-music" style="max-width: 100%;">
         <h2 class="nombreRegistro">REGISTRO</h2>
         <form action="" method="">
         <input type="email" class="input-style" name="email" placeholder="Ingrese su email">
