--- a/src/views/products/carrito.ejs
+++ b/src/views/products/carrito.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<%-include('../partials/head')  %>  
+<%-include('../partials/head',{title:'carrito'})  %>  
 <body>
 <%-include('../partials/header')  %> 
 <section class="carrito2">
