--- a/src/views/products/carrito.ejs
+++ b/src/views/products/carrito.ejs
@@ -6,10 +6,10 @@
 <section class="carrito2">
    <div class="product">
         <div class="section1">
-            <img src="images/Home/New products/guitar1.png" alt="imagen">
+            <img src="/images/products/guitar1.png" alt="imagen">
             <h2>Producto</h2>
             <p class="price">200</p>
-            <input type="number" value="1";>
+            <input class="cantidad" type="number" value="1";>
             <p class="price">200</p>
         </div>
         <div class="section2">
@@ -20,7 +20,7 @@
    </div> <!--cierra el producto -->
    <div class="product">
     <div class="section1">
-        <img src="images/products/stratocaster.png" alt="imagen">
+        <img src="/images/products/stratocaster.png" alt="imagen">
         <h2>Producto</h2>
         <p class="price">200</p>
         <input type="number" value="1";>
