probando github page

--- a/views/registro.html
+++ b/views/registro.html
@@ -13,7 +13,7 @@
     <img src="images/Central Music Logo.svg" alt="logo-fa-music" style="max-width: 100%;">
    </div>
     <form class="formulario">
-        <h1>REGISTRO</h1>
+        <h1>EGISTRO</h1>
 
      <div class="contenedor">
        <div class="input-contenedor">
