--- a/src/views/products/detailsProduct.ejs
+++ b/src/views/products/detailsProduct.ejs
@@ -73,7 +73,7 @@
                                 <p><b>Orientacion de la mano:</b> <%= product.hand  %> </p>
                                 <p><b>Color:</b> <%= product.color  %> <br>
                                 <p><b>Tipo de madera del cuerpo:</b> <%= product.wood  %> </p>
-                                <p><b> Material del diapason:</b> <%= product.fretboard  %> </p>
+                                <p><b> Material del diapason:</b> <%= product.freatboard  %> </p>
                                 <p><b>Acabado del cuerpo:</b> <%= product.bodyFinish  %> </p>
                             <% } else { %>
                            
@@ -91,7 +91,7 @@
                         </p>
                     </div>
                 </section>
-                <section class="products-interest">
+                <section class="products-interest new-products products popular-finds products ">
                     <div class="product-interest-container">
                         <div class="new-products-separador"></div>
                         <h2>Productos que te podrian interesar</h2>
@@ -115,45 +115,6 @@
                                     </a>
                                 </article>
                             <% }) %>
-                            <!-- 
-
-                                <article>
-                                <a href="/productos/detail/ ">
-                                    <div class="product-container">
-                                        <div class="img-container">
-                                            <img src="../../images/products/afinador.svg" alt="accesorios">
-                                        </div>
-                                        <div class="description-container">
-                                            <div class="guitar-precio">
-                                                <h4>Pedal Polytune Afinador</h4>
-                                                <p>$2,995</p>
-                                            </div>
-                                            <p class="description">Product description here</p>
-                                            <p><b>0</b> Colores available</p>
-                                        </div>
-                                    </div>
-                                </a>
-                            </article>
-                            <article>
-                                <a href="/">
-                                    <div class="product-container">
-                                        <div class="img-container">
-                                            <img src="../../images/products/cuerdas.svg" alt="accesorios">
-                                        </div>
-                                        <div class="description-container">
-                                            <div class="guitar-precio">
-                                                <h4>Cuerdas Ernie ball guitar</h4>
-                                                <p>$2,995</p>
-                                            </div>
-                                            <p class="description">Product description here</p>
-                                            <p><b>0</b> Colores available</p>
-                                        </div>
-                                    </div>
-                                </a>
-                            </article>
-
-                            -->
-                            
                         </div>
                     </div>
                 </section>
