login registro espero salga

--- a/views/registro.html
+++ b/views/registro.html
@@ -14,44 +14,23 @@
    </div>
     <form class="formulario">
         <h1>REGISTRO</h1>
-
-     <div class="contenedor">
-       <div class="input-contenedor">
-         <i class="fas fa-user icon"></i>
-         <input type="text" placeholder="Nombre y Apellido">
-         <span class="error-message">Debe ingresar datos completos</span>
-        </div>
-   <div class="contenedor">
-     <div class="input-contenedor">
-          <i class="fas fa-envelope icon"></i>
-          <input type="text" placeholder="correo electronico">
-          <span class="error-message">Ingrese correo</span> 
-     </div>
-
-      <div class="input-contenedor">
-           <i class="fas fa-key icon"></i>
-           <input type="password" placeholder="Contraseña">
-           <span class="error-message">Ingresar su contraseña</span>
-      </div>
-      
-      <div class="input-contenedor">
-            <i class="fas fa-key icon"></i>
-            <input type="password" placeholder=" Repetir Contraseña">
-            <span class="error-message">Debe re-ingresar su contraseña</span>
-      </div>
-    
-     <input type="submit" class="btn solid" value="Crear cuenta" />
-        <p>Estoy de Acuerdo con <a href="#">Terminos y Condiciones</a></p>
-  <div class="form--group">
-      <label for="avatar">Avatar</label>
-      <input type="file" name="avatar" id="avatar" >
-          <small class="text-danger">Campo requerido</small>
-      <span class="error-message">Hubo un error en el registro</span>
-     <button class="btn btn-outline-success" type="reset">Limpiar</button>
-     <p><a href="login.html">Ya tengo Cuenta</a></p>
-    </div>
-  </div>
-    </form>
+        
+          <div class="contenedor-formulario">
+              <div class="input-contenedor">
+                  <i class="fa-solid fa-user"></i>
+                  <input type="text" placeholder="Nombre Completo">
+              </div>
+              <div class="input-contenedor">
+                  <i class="fa-solid fa-envelope"></i>
+                  <input type="email" placeholder="Correo Electronico">
+              </div>
+              <div class="input-contenedor">
+                  <i class="fa-solid fa-key"></i>
+                  <input type="password" placeholder="Contraseña">
+              </div>
+              <input type="submit" value="Registrate" class="button">
+              <p class="texto-formulario">Al registrarte aceptas las Condiciones de uso y las Politicas de
+                  privacidad
    
 </body>
 </html>
