--- a/views/login.html
+++ b/views/login.html
@@ -12,46 +12,24 @@
     <div class="logo">
      <img src="images/Central Music Logo.svg" alt="logo-fa-music" style="max-width: 100%;">
     </div>
-    <form class="formulario">
-        <h1>LOGIN</h1>
+    
+    <section class="formularioLogin">
+      <h2>Inicia Sesión</h2>
+      <form action="">
+          <div>
+              <input type="email" name="email" placeholder="Correo Electrónico">
+          </div>
+          <div>
+              <input type="password" name="pass" placeholder="Contraseña">
+          </div>
+          <div>
+              <button type="submit">Entrar</button>
+          </div>
+          <span>¿No tienes una cuenta? <a href="formularios">Registrate</a></span>
+      </form>
+  </section>
 
-         <div class="contenedor">
-           <div class="input-contenedor">
-             <i class="fas fa-envelope icon"></i>
-             <input type="text" placeholder="correo electronico">
-             <p>Ingrese su correo electronico</p>
-            </div>
-            <div class="input-contenedor">
-                <i class="fas fa-key icon"></i>
-                <input type="password" placeholder="Contraseña">
-                <p>Ingrese Contraseña</p>
-             </div>
-             
-            </div>
-            <input type="submit" class="btn solid" value="Iniciar sesion" />
-            <div class="input_check-container">
-                <label for="recordar">Recordarme</label>
-                <input type="checkbox" name="remember" id="recordar">     
-            </div>
-            <p class="smedia-text">Ingresar con</p>
-            
-            <div class="icon-container">
-             <div class="social-media">
-               <a href="#" class="social-icon">
-               <i class="fab fa-facebook"></i>
-               </a>
-             </div>
-              <div class="social-media">
-               <a href="#" class="social-icon">
-               <i class="fab fa-twitter"></i>
-               </a>
-              </div>
-              <div class="social-media">
-                <a href="#" class="social-icon">
-                <i class="fab fa-google"></i>
-               </a>
-               </div>  
-            </div>
+           
          <span><a href="register.html" class="noTengoCuenta">No tengo cuenta</a></span>
      </div>
     
