--- a/public/CSS/carrito2.css
+++ b/public/CSS/carrito2.css
@@ -6,7 +6,7 @@ body{
 
 .carrito2{
     display: block;
-    background-color: #FFFFFF;
+    
    padding: 1em;
     width: 70%;
     height: auto;
@@ -19,6 +19,7 @@ h2{
 }
 .product{
     display: flex;
+    background-color: rgba(255, 255, 255, 0.5);
     justify-content: center;
     align-items: center;
     width:70%;
@@ -32,10 +33,10 @@ h2{
 .product img{
     display: flex;
     justify-content: center;
-    width: 20%;
+    width: 30%;
     object-fit: contain;
-    height: auto;
-    padding: 1em;
+    height: 100%;
+   
     
 }
 
