--- a/public/CSS/carrito2.css
+++ b/public/CSS/carrito2.css
@@ -26,7 +26,7 @@
     display: flex;
     flex-direction: column;
     border: 1px solid black;
-    background-color: white;
+    
 }
 
 .product img{
@@ -73,7 +73,7 @@
     justify-content: center;
     align-content: center;
     align-items: center;
-  
+    border: 1px solid black;
 }
 
 .section2{
