--- a/src/views/users/registro.ejs
+++ b/src/views/users/registro.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    <%-include('../partials/head')  %> 
+    <%-include('../partials/head',{title:'register'})  %> 
 <body class ="body-register home-container">
     <%-include('../partials/header')  %> 
      <section class="form">
