--- a/public/CSS/carrito2.css
+++ b/public/CSS/carrito2.css
@@ -1,8 +1,8 @@
 
 
-.carrito2 body{
+body{
     box-sizing: content-box;
-}
+} 
 
 .carrito2{
     display: block;
@@ -12,6 +12,7 @@
     margin: auto;
     margin-top: 10%;
     margin-bottom: 10%;
+   
 }
 .carrito2 h2{
     padding: 0.5em;
@@ -26,6 +27,7 @@
     display: flex;
     flex-direction: column;
     border: 1px solid black;
+    background-color: rgba(255, 255, 255, 0.2);
     
 }
 
@@ -74,6 +76,7 @@
     align-content: center;
     align-items: center;
     border: 1px solid black;
+    background-color: rgba(255, 255, 255, 0.2);
 }
 
 .section2{
