--- a/public/CSS/login.css
+++ b/public/CSS/login.css
@@ -1,11 +1,7 @@
-div.container section.formularioLogin {
-    display: flex;
-    flex-direction: column;
-    margin-top: 150px;
+.formulario_Login {
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 2px solid var(--naranja-Fuerte);
     width: 80vw;
     margin-left: auto;
     margin-right: auto;
@@ -13,56 +9,35 @@ div.container section.formularioLogin {
     border-radius: 20px;
     max-width: 350px;
     margin-bottom: 110px;
+    border: 1px solid orange;
+    background-color: rgba(255, 255, 255, 0.2);
 }
 
-div.container section.formularioLogin h2 {
-    margin: 0 auto;
+.recordar {
+    display: flex;
+    justify-content:center;
 }
 
-div.container section.formularioLogin form div {
+
+/* div.container section.formularioLogin form div {
     display: flex;
     justify-content: center;
     margin-top: 10px;
     margin-bottom: 10px;
     height: 30px;
     
+} */
+
+
+
+.input-style {
+   
+    background-color: rgba(255, 255, 255, 0.2);
+    width: 100%;
+    
 }
 
-div.container section.formularioLogin form div input {
-    border-radius: 20px;
-    border-color: var(--naranja-Fuerte);
-    border-style: solid;
-    text-align: center;
-}
 
-div.container section.formularioLogin form div input::placeholder {
-    text-align: center;
-}
-
-div.container section.formularioLogin form div input:focus {
-    outline: none;
-}
-
-div.container section.formularioLogin form div button {
-    border: none;
-    background-color: var(--naranja-Fuerte);
-    color: white;
-    width: 50vw;
-    height: 30px;
-    border-radius: 20px;
-    max-width: 188px;
-    cursor: pointer;
-}
-
-div.container section.formularioLogin form span {
-    font-size: 12px;
-    display: flex;
-    justify-content: center;
-}
-
-div.container section.formularioLogin form span a{
-    margin-left: 5px;
-}
 
 @media screen and (min-width: 768px){ 
     div.container section.formularioLogin h2{
@@ -98,12 +73,7 @@ div.container section.formularioLogin form span a{
     }
 
     
-    div.container section.formularioLogin form div button {
-        height: 50px;
-        max-height: none;
-        width: 50vw;
-        max-width: 400px;
-    }
+ 
     
     div.container section.formularioLogin form span {
         margin-top: 10px;
