inicio CRUD products

--- a/src/views/admin/partials/header.ejs
+++ b/src/views/admin/partials/header.ejs
@@ -2,9 +2,10 @@
     <nav class="barra-navegacion">
         <div class="logo-container">
             <a href="/">
-                <img src="../images/Central Music Logo.svg" alt="logo">
+                <img src="/images/Home/Central Music Logo.svg" alt="logo">
             </a>
             <ul class="menu-header">
+                <li><a href="/admin/products">Listado de productos</a</li>
                 <li><a href="">Guitars</a></li>
                 <li><a href="">Accesories</a></li>
                 <li><a href="">Storage</a></li>
@@ -13,7 +14,7 @@
             </ul>
         </div>
         <div class="menu-burger">
-            <img src="../images/Home/burger.svg" alt="burger">
+            <img src="/images/Home/burger.svg" alt="burger">
             <div class="icons-container">
                 <a href="/carrito">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
