--- a/public/CSS/admin/addProduct.css
+++ b/public/CSS/admin/addProduct.css
@@ -36,10 +36,11 @@
     margin-top: 21px;
     font-weight: 500;
     width: 300px;
+    height: 35px;
 }
 
 .input-container1 .input-style1 {
-    height: 26px;
+    height: 35px;
     border: 1px solid rgba(146, 146, 146, 0.301);
     border-radius: 5px;
     padding: 10px;
@@ -67,7 +68,7 @@
 }
 
 .file-container {
-    margin-top: 25px;
+    margin-top: 43px;
 }
 
 .error-message1 {
@@ -79,7 +80,7 @@
 .form-container1 select {
     border: 1px solid rgba(146, 146, 146, 0.301);
     border-radius: 5px;
-    height: 26px;
+    height: 35px;
     padding: 2px 10px;
     outline-color: #FF753A;
 }
@@ -93,6 +94,61 @@
     text-align: center;
 }
 
+.btn-switch {
+    margin-top: 30px;
+    flex-direction: row;
+    align-items: center;
+}
+
+
+
+.input-container1 .lbl-switch {
+    display: inline-block;
+    width: 55px;
+    height: 30px;
+    background: #aaa;
+    border-radius: 100px;
+    position: relative;
+    cursor: pointer;
+    margin-top: 0px;
+    margin-bottom: 0px;
+
+}
+
+#stock:checked + .lbl-switch {
+    background: #FF753A;
+
+}
+
+.input-container1 .lbl-switch::after {
+    position: absolute;
+    content: '';
+    width: 22px;
+    height: 22px;
+    background: #FFF;
+    border-radius: 100px;
+    top: 4px;
+    left: 5px;
+    transition: 0.3s;
+
+}
+
+#stock:checked + .lbl-switch::after {
+    left: 28px;
+    
+}
+
+#stock {
+    display: none;
+}
+
+.lbl-stock {
+    margin-left: 15px;
+    font-weight: 500;
+}
+
+
+
 
 @media (min-width: 768px) {
     .form-container1 {
@@ -103,11 +159,16 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: center; 
-        gap: 20px 70px;
+        gap: 6px 70px;
     }
 
     .input-description-container {
         padding: 42px;
     }
 
+    .btn-switch {
+        width: 87%;
+    }
+
+    
 }
