--- a/public/CSS/admin/listProduct.css
+++ b/public/CSS/admin/listProduct.css
@@ -8,6 +8,10 @@
     margin-top: 5px;
 }
 
+.tabla {
+    font-size: 10px;
+}
+
 .tabla table {
     width: 100%;
     text-align: left;
@@ -48,4 +52,12 @@
 
 .listProduct tbody tr:hover {
     background-color: darkgrey;
+}
+
+
+
+@media(min-width: 768px) {
+    .tabla {
+        font-size: 16px;
+    }
 }
