--- a/src/views/admin/products/addProduct.ejs
+++ b/src/views/admin/products/addProduct.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<%-include('../partials/head')  %> 
+<%-include('../partials/head', {title: 'Agregar producto'})  %> 
 <body class="home-container admin-container">
     <%-include('../partials/header')  %> 
     
@@ -67,10 +67,16 @@
                     <label for="category">Categoria</label>
                     <select name="categoryId" id="category" >
                         <option selected hidden>Categoria</option>
-                        <option value="1">Guitarras</option>
-                        <option value="2">Accesorios</option>
+                        <option value="guitar" class="guitar">Guitarras</option>
+                        <option value="accesory" class="accesory">Accesorios</option>
                         <span class="error-message1">Debe ingresar una categoria</span>
                     </select>
+                 </div>
+                 <div class="btn-switch input-container1">
+                     
+                     <input type="checkbox" name="stock" role="switch" id="stock" >
+                     <label for="stock" class="lbl-switch"></label>
+                     <span class="lbl-stock">Stock disponible</span>
                  </div>
             </div>
              <div class="input-container1 input-description-container">
@@ -84,5 +90,6 @@
     </form>
 
     <%-include('../partials/footer')  %> 
+    <script src="/scripts/addProduct.js"></script>
 </body>
 </html>
