--- a/public/CSS/detailsProduct/detailsProduct.css
+++ b/public/CSS/detailsProduct/detailsProduct.css
@@ -9,7 +9,8 @@
 .header-detailsProduct {
     width: 100%;
     height: 165px;
-    
+    padding: 44px 25px;
+    background-color: #F40000; 
      
 }
 
