--- a/src/views/admin/products/addProduct.ejs
+++ b/src/views/admin/products/addProduct.ejs
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <%-include('../partials/head', {title: 'Agregar producto'})  %> 
-<body class="home-container admin-container">
-    <%-include('../partials/header')  %> 
+<body class="listProduct home-container admin-container">
+    
+    <%-include('../partials/header')  %>    
+    
     
     <form action="" class="form-addProduct">
         
