--- a/src/views/admin/products/adminDetail.ejs
+++ b/src/views/admin/products/adminDetail.ejs
@@ -3,7 +3,9 @@
 <%-include('../partials/head', {title: product.name}) %>
 
     <body class="home-container bodyDetailsProduct">
+        <div class="color-container">
         <%-include('../partials/header') %>
+        </div>
             <main class="details-main">
                 <section class="product-view">
                     <h1><%= product.name  %> </h1>
