--- a/public/CSS/detailsProduct/detailsProduct.css
+++ b/public/CSS/detailsProduct/detailsProduct.css
@@ -9,9 +9,18 @@
 .header-detailsProduct {
     width: 100%;
     height: 165px;
+   /*  padding: 44px 25px;
+    background-color: #F40000;  */
+     
+}
+
+.color-container {
+   
+    
+    width: 100%;
+    height: 165px;
     padding: 44px 25px;
     background-color: #F40000; 
-     
 }
 
 .details-main {
