--- a/src/views/home/index.ejs
+++ b/src/views/home/index.ejs
@@ -53,7 +53,7 @@
             <h3>New Products</h3> 
             <% guitars.forEach(guitar => { %>
                     <article>
-                        <a href="/productos/detail/<%- guitar.id %> ">
+                        <a href="/products/detail/<%- guitar.id %> ">
                             <div class="product-container">
                                 <div class="img-container">
                                     <img src="images/products/<%- guitar.image %> " alt="producto-guitarra">
@@ -76,7 +76,7 @@
             <h3>Popular Finds</h3>
             <% accesories.forEach(accesory => { %>
                 <article>
-                    <a href="/productos/detail/<%- accesory.id %> ">
+                    <a href="/products/detail/<%- accesory.id %> ">
                         <div class="product-container">
                             <div class="img-container">
                                 <img src="images/products/<%- accesory.image %> " alt="accesorios">
