--- a/src/views/admin/products/listProducts.ejs
+++ b/src/views/admin/products/listProducts.ejs
@@ -28,7 +28,7 @@
                         <td><a href="product/detail/<%- product.id %> "><%- product.category %></a></td>
                         <td><%- product.stock %></td>
                         <td>
-                            <a href="" class="btn-edit">
+                            <a href="/admin/products/edit/<%- product.id %> " class="btn-edit">
                                 <i class="fa-solid fa-pen"></i>
                             </a>
                                 <form action="">
