--- a/src/views/products/detailsProduct.ejs
+++ b/src/views/products/detailsProduct.ejs
@@ -98,7 +98,7 @@
                         <div class="card-interest">
                             <% products.forEach(product => { %>
                                 <article>
-                                    <a href="/productos/detail/<%= product.id  %> ">
+                                    <a href="/products/detail/<%= product.id  %> ">
                                         <div class="product-container">
                                             <div class="img-container">
                                                 <img src="../../images/products/<%= product.image  %> " alt="accesorios">
