--- a/src/views/home/index.ejs
+++ b/src/views/home/index.ejs
@@ -10,8 +10,8 @@
                     <img src="images/Home/Central Music Logo.svg" alt="logo">
                 </a>
                 <ul class="menu-header">
-                    <li><a href="/productos/guitars">Guitars</a></li>
-                    <li><a href="/productos/accesories">Accesories</a></li>
+                    <li><a href="/products/guitars">Guitars</a></li>
+                    <li><a href="/products/accesories">Accesories</a></li>
                     <li><a href="">Storage</a></li>
                     <li><a href="">Lessons</a></li>
                     <li><a href="">Repairs</a></li>
