--- a/src/views/products/detailsProduct.ejs
+++ b/src/views/products/detailsProduct.ejs
@@ -75,7 +75,7 @@
                                 <p><b>Orientacion de la mano:</b> <%= product.hand  %> </p>
                                 <p><b>Color:</b> <%= product.color  %> <br>
                                 <p><b>Tipo de madera del cuerpo:</b> <%= product.wood  %> </p>
-                                <p><b> Material del diapason:</b> <%= product.freatboard  %> </p>
+                                <p><b> Material del diapason:</b> <%= product.fretboard  %> </p>
                                 <p><b>Acabado del cuerpo:</b> <%= product.bodyFinish  %> </p>
                             <% } else { %>
                            
@@ -120,8 +120,9 @@
                         </div>
                     </div>
                 </section> -->
-                <%-include('../partials/footer')  %>     
+                    
             </main>
+            <%-include('../partials/footer')  %> 
         </body>
 
 </html>
