--- a/src/views/admin/partials/header.ejs
+++ b/src/views/admin/partials/header.ejs
@@ -7,9 +7,8 @@
             </a>
             <ul class="menu-header">
                 <li><a href="/admin/products">Listado de productos</a</li>
-                <li><a href="/admin/products/add">Agregar producto</a></li>
-                <li><a href="">Guitars</a></li>
-                <li><a href="">Accesories</a></li>
+                <li><a href="/admin/products/guitar/add">Agregar guitarra</a></li>
+                <li><a href="/admin/products/accesory/add">Agregar accesorio</a></li>
                 <li><a href="">Lessons</a></li>
                 <li><a href="">Repairs</a></li>
             </ul>
