--- a/src/views/admin/products/addAccesory.ejs
+++ b/src/views/admin/products/addAccesory.ejs
@@ -6,59 +6,35 @@
     <%-include('../partials/header')  %>    
     
     
-    <form action="" class="form-addProduct">
+    <form action="/admin/products" method="POST" class="form-addProduct">
         
         <div class="form-container1">
             <div class="new-products-separador"></div>
-            <h2>Agregar producto</h2>
+            <h2>Agregar accesorio</h2>
             <div class="inputs-container1">
                 <div class="input-container1">
                     <label for="name">Nombre del producto</label>
-                    <input type="text" name="name" id="name" placeholder="Ej: Guitarra Gibson" class="input-style1">
+                    <input type="text" name="name" id="name" placeholder="Ej: Cuerdas Ernie Ball" class="input-style1">
                     <span class="error-message1">Debe ingresar un nombre de producto</span>
                 </div>
                 <div class="input-container1">
                     <label for="marca">Marca</label>
-                    <input type="text" name="marca" id="marca" placeholder="Ej:Gibson" class="input-style1">
+                    <input type="text" name="marca" id="marca" placeholder="Ej:Ernie Ball" class="input-style1">
                     <span class="error-message1">Debe ingresar la marca</span>
                 </div>
                 <div class="input-container1">
                     <label for="line">Linea</label>
-                    <input type="text" name="line" id="line" placeholder="Ej:SE series" class="input-style1">
+                    <input type="text" name="line" id="line" placeholder="Ej: Standar" class="input-style1">
                     <span class="error-message1">Debe ingresar la serie</span>
                 </div>
                 <div class="input-container1">
                     <label for="model">Modelo</label>
-                    <input type="text" name="model" id="model" placeholder="Ej: Standar 24" class="input-style1">
+                    <input type="text" name="model" id="model" placeholder="Slinky" class="input-style1">
                     <span class="error-message1">Debe ingresar modelo</span>
-                </div>
-                <div class="input-container1">
-                    <label for="hand">Orientacion de la mano</label>
-                    <input type="text" name="hand" id="hand" placeholder="Ej:Diestro" class="input-style1">
-                    <span class="error-message1">Debe ingresar la orientacion</span>
                 </div>
                  <div class="input-container1">
                     <label for="price">Precio</label>
                     <input type="number" name="price" id="price" placeholder="Ej: 3000" class="input-style1">
-                </div>
-                <div class="input-container1">
-                    <label for="color">Color</label>
-                    <input type="text" name="color" id="color" placeholder="Ej: Sunsburts" class="input-style1">
-                </div>
-                <div class="input-container1">
-                    <label for="materialBody">Tipo de madera del cuerpo</label>
-                    <input type="text" name="materialBody" id="materialBody" placeholder="Ej:Caoba" class="input-style1">
-                    <span class="error-message1">Debe ingresar el material</span>
-                </div>
-                <div class="input-container1">
-                    <label for="materialFretboard">Material del diapason</label>
-                    <input type="text" name="materialFretboard" id="materialFretboard" placeholder="Ej:Palo rosa" class="input-style1">
-                    <span class="error-message1">Debe ingresar el material</span>
-                </div>
-                <div class="input-container1">
-                    <label for="bodyFinish">Acabado del cuerpo</label>
-                    <input type="text" name="bodyFinish" id="bodyFinish" placeholder="Ej:Polurietano" class="input-style1">
-                    <span class="error-message1">Debe ingresar el acabado</span>
                 </div>
                 <div class="input-container1 file-container">
                     <label for="image"  class="btn-file">Agregar imagenes</label>
@@ -67,16 +43,14 @@
                 </div>
                 <div class="input-container1">
                     <label for="category">Categoria</label>
-                    <select name="categoryId" id="category" >
-                        <option selected hidden>Categoria</option>
-                        <option value="guitar" class="guitar">Guitarras</option>
-                        <option value="accesory" class="accesory">Accesorios</option>
+                    <select name="category" id="category" >
+                        <option selected hidden value="accesory" class="accesory">Accesorio</option>
                         <span class="error-message1">Debe ingresar una categoria</span>
                     </select>
                  </div>
                  <div class="btn-switch input-container1">
                      
-                     <input type="checkbox" name="stock" role="switch" id="stock" >
+                     <input type="checkbox" name="stock"  id="stock" >
                      <label for="stock" class="lbl-switch"></label>
                      <span class="lbl-stock">Stock disponible</span>
                  </div>
@@ -92,6 +66,6 @@
     </form>
 
     <%-include('../partials/footer')  %> 
-    <script src="/scripts/addProduct.js"></script>
+    
 </body>
 </html>
